<resources>
    <string name="app_name">搭搭找团</string>
    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>
    <string name="action_settings">设置</string>


    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
    <string name="select">选择</string>

    <!--个人页-->
    <string name="action_stroke">行程</string>
    <string name="action_like">收藏</string>
    <string name="action_wallet">钱包</string>
    <string name="action_service">客服</string>
    <string name="action_setting">设置</string>
    <string name="user_name">小嗒</string>
    <string name="user_level">普通会员</string>
    <string name="todo">TODO</string>


    <string name="memo">备注:</string>
    <string name="name">姓名:</string>
    <string name="edit_cancel">取消</string>
    <string name="edit_title">编辑资料</string>
    <string name="edit_done">完成</string>
    <string name="edit_change_photo">修改头像</string>
    <string name="edit_name">昵称</string>
    <string name="edit_user_name">小嗒</string>
    <string name="sex">性别</string>
    <string name="edit_sex">男</string>
    <string name="age">年龄</string>
    <string name="edit_age">几零后</string>
    <string name="job">行业</string>
    <string name="edit_job">计算机</string>
    <string name="company">公司</string>
    <string name="edit_company">添加所在公司</string>
    <string name="sign">个性签名</string>
    <string name="edit_sign_hint">还未填写个性签名，简单介绍一下自己吧</string>

    <string name="topic">标题</string>
    <string name="detail">内容</string>
    <string name="price">价格</string>
    <string name="user_info">个人信息</string>
    <string name="people_num">人数:</string>


    <!--网络相关-->
    <string name="baseUrl">http://120.79.19.183:8080/</string>


    <!--发布页-->
    <string name="add_title">发布</string>
    <string name="add_topic">标题 关键词都是朋友喜欢搜索的</string>
    <string name="add_content">描述一下该团的细节和注意事项</string>
    <string name="add_location">点击定位</string>
    <string name="add_tag">分类</string>
    <string name="add_time">时间</string>
    <string name="add_button">确定发布</string>
    <string name="now_price">单人价格</string>
    <string name="cn_price">¥</string>
    <string name="no_price">0.00</string>
    <string name="pref_price">单人原价</string>
    <string name="now_num">现有人数</string>
    <string name="no_num">0人</string>
    <string name="total_num">总共人数</string>
    <string name="order_total_price">实付款 :</string>
    <string name="order_ok">确定</string>


    <string name="simpleImage">https://dada-1256129579.cos.ap-chengdu.myqcloud.com/1024*1024.png</string>
    <string name="avatar">http://t2.hddhhn.com/uploads/tu/201612/98/st94.png</string>
    <!--订单页-->

</resources>
